2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: use string::erase() not string::clear()
	  for 2.95

	* libutil++/generic_spec.h: allow to ignore "all" match
	* libutil++/comma_list.h: use it

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: output column headers for
	image report

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp:
	* pp/opreport.cpp:

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/op_header.h:
	* libpp/op_header.cpp: output header info to
	a string not a stream

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: give classes a long
	name, and fill in global event/cpu info

	* pp/opannotate.cpp:
	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h: use the class long names
	and info

2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_spec.cpp: handle symlink

2003-09-14  John Levon  <levon@movementarian.org>

	* arrange_profiles.h:
	* arrange_profiles.cpp: Add code to give short names
	to each class, unused yet

2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: missing include<> with gcc 2.95

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/split_sample_filename.cpp:
	* libpp/split_sample_filename.h: rename as ...

	* libpp/parse_filename.cpp:
	* libpp/parse_filename.h: ... this

	* libpp/filename_spec.cpp:
	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h: sort classes for niceness,
	changes from above

	* pp/opreport.cpp: remove needless double check of
	exclude_dependent

	* libutil++/string_manip.cpp: touint should init to 0
	in case of parse failure

2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: fix maximum template depth to 50
	* libutil/op_fileio.c: op_get_link() don't truncate silently results